--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@clerk/nextjs": "^6.8.0",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.43.0"
   },
   "devDependencies": {
     "@types/node": "^20",
